# fhir-agent

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  deploy.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup-credentials.sh
.ona/: automations.yaml
athena-emulator/: README.md
client/: README.md  __init__.py
client/clinical/: README.md  __init__.py  fhir_client.py  pyproject.toml  requirements.txt  smoke_test.py
client/clinical/src/fhir_clinical_client/: __init__.py  fhir_client.py
client/clinical/tests/: test_parsers.py
client/platform/: README.md  __init__.py  integration_test.py
data/: .gitignore  README.md
data/scripts/: download_sample.sh  expunge.sh  generate.sh  load.py  seed_demo.py  test_load.py
data/synthea/: synthea.properties
epic-emulator/: README.md
fhir-server/: README.md  pom.xml
fhir-server/src/main/java/ca/uhn/fhir/jpa/starter/: AppProperties.java
fhir-server/src/main/resources/: application-neon.yaml  application.yaml
fhir-service/: Dockerfile  README.md  pom.xml
fhir-service/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml.example  service.yaml
fhir-service/src/main/resources/: application.yaml
fhir-service/tests/: .gitkeep  smoke_test.py
gateway/: README.md
gateway/kong/: kong-consumers.yaml  kong-db-secret.yaml.example  kong-ingress.yaml  kong-plugins.yaml  kong-values.yaml
gateway/tools/: create-key.sh  rotate-key.sh
mcp-agent/: Dockerfile  README.md  pyproject.toml
mcp-agent/src/agent/: agent.py  format.py  tools.py
mcp-agent/tests/: test_e2e_demo_flow.py
triage-service/: Dockerfile  README.md  pyproject.toml
triage-service/src/triage/: main.py  models.py  rules.py
triage-service/src/triage/tests/: test_api.py  test_rules.py
(+18 files in other folders)
